# code_skeleton

./: MANIFEST.in  README.md  abstract_factory.classes  analyse_code.py  analyse_python_code.py  animals.dot  app.py  class_decriptor.py  class_dumper.py  class_dumper_classes.py  class_dumper_cpp.py  class_dumper_dot.py  class_dumper_python.py  class_reader.py  iterator.classes  merge-classes.py  merge_classes.py  particles.classes  pyproject.toml  series.classes  setup.py  singleton.classes  test.classes
code_skeleton/: __init__.py  analyse_code.py  analyse_python_code.py  class_decriptor.py  class_dumper.py  class_dumper_classes.py  class_reader.py  merge_classes.py
code_skeleton/scripts/: class_dumper_cpp.py  class_dumper_dot.py  class_dumper_python.py
examples/: animals.classes
scripts/: class_dumper_cpp.py  class_dumper_dot.py  class_dumper_python.py
streamlit_app/: app.py
tests/: test_classes_parser.py
